--- a/front-and-back-matter/notations.tex
+++ b/front-and-back-matter/notations.tex
@@ -24,5 +24,6 @@
 \item[$\mathcal{Q}$] A set of quadrature nodes.
 \item[$\omega: \mathcal{Q} \to \mathbb{R}$] A quadrature weighting function.
 \item[$\mathcal{Q}(m, k)$] Gauss-Hermite quadrature points in $m$ dimensions with $k$ nodes per dimension, constructed according to a product rule.
+\item[$\varphi$] A standard (multivariate) Gaussian density.
 
 \end{mclistof} 
