--- a/references.bib
+++ b/references.bib
@@ -1697,3 +1697,14 @@ doi = {10.1201/9781420072884-c30}
   year={2022},
   publisher={Taylor \& Francis}
 }
+
+@article{naylor1982applications,
+  title={Applications of a method for the efficient computation of posterior distributions},
+  author={Naylor, John C and Smith, Adrian FM},
+  journal={Journal of the Royal Statistical Society Series C: Applied Statistics},
+  volume={31},
+  number={3},
+  pages={214--225},
+  year={1982},
+  publisher={Oxford University Press}
+}
